@@ -5,6 +5,7 @@ June 04, 2011
 -------------
 by troky: Updated topic_list preprocess function: getting 'tid' usig arg() replaced by using menu_get_item() function.
 by troky: Fixed notice in views introduced by above patch.
+by troky: Added topic-pager to template and removed theme function.
 
 June 02, 2011
 -------------
